--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "rpg-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "ws": "^8.18.3"
+    "ws": "^8.16.0",
+    "bcryptjs": "^2.4.3"
   }
 }
