Change start script to use server-frontend.js

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rpg-server",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
+  "scripts":
+  "start": "node server-frontend.js"
   },
   "dependencies": {
     "ws": "^8.16.0",
